<resources>
    <string name="str_title">Simple MEMO</string>

    <string name="str_new">NEW</string>

    <string name="str_open">OPEN</string>

    <string name="str_exit">EXIT</string>

    <string name="str_save">SAVE</string>

    <string name="str_menu">MENU</string>

    <string name="str_filename">Write file name</string>

    <string name="str_editmemo">Write memo</string>

    <string name="str_warningTitle">Message</string>

    <string name="str_edit">EDIT</string>

    <string name="str_del">DEL</string>

    <string name="app_name">Android Memo</string>

</resources>
