<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffbf4"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:text="Android Memo"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="#80b447"
        android:textColorHighlight="#00ff00"
        android:textSize="40dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_new"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:background="@drawable/btn_bg_ex"
            android:text="@string/str_new"
            android:textColor="#58c1b6"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_open"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_bg_ex"
            android:text="@string/str_open"
            android:textColor="#58c1b6"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_bg_ex"
            android:text="@string/str_exit"
            android:textColor="#58c1b6"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>