<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:background="#fffbf4">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="84dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Android Memo"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="#80b447"
        android:textColorHighlight="#00ff00"
        android:textSize="50dp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_new"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_open"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="26dp"
            android:background="@drawable/btn_bg_ex"
            android:text="@string/str_new"
            android:textColor="#58c1b6"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_open"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_exit"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="28dp"
            android:background="@drawable/btn_bg_ex"
            android:text="@string/str_open"
            android:textColor="#58c1b6"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="107dp"
            android:background="@drawable/btn_bg_ex"
            android:text="@string/str_exit"
            android:textColor="#58c1b6"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>